# Simple-YouTube-Summarizer

./: .gitignore  MVP.md  README.md  TODO.MD  main.py  pyproject.toml  requirements.txt  yt_to_transcript_from_another_project.py
src/summarizer/: __init__.py  cli.py  config.py  pipeline.py  routing.py
src/summarizer/extractors/: __init__.py  base.py  media_file.py  text_file.py  youtube.py
src/summarizer/transcription/: __init__.py  factory.py  mlx_whisper_backend.py
